--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "main": "dist/index.js",
     "scripts": {
-        "start": "tsc && node dist/index.js",
+        "dev": "tsc && node dist/index.js",
+        "start": "node dist/index.js",
         "build": "tsc",
         "test": "node test/index.js"
     },
